# Document_retrieval

./: .gitignore  README copy.md  README.md  pyproject.toml
data/: data_test.json
notebooks/: Contrastive representation learning EDA.ipynb  Dataset Creation.ipynb
src/contrastive_learning/model/: config.yaml  evaluation.py  losses.py  train.py
