[tool.poetry]
name = "contrastive_learning"
version = "0.1.0"
description = "\"representation learning\""
authors = ["Christian <christian@allisone.ai>"]
readme = "README.md"
#packages = [{ include = "constrastive_representation_learning" }]

[tool.poetry.dependencies]
python = "3.10.5"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl" }
sentence-transformers = "^2.7.0"
omegaconf = "^2.3.0"


[tool.ruff]
line-length = 100
# lint, pyflakes, pycodestyle
select = ["F", "E", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
line_length = 100
profile = 'black'
